...
    android:background="@color/bg_color"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnDone"
        android:layout_margin="@dimen/ten_dp"
        app:cardCornerRadius="@dimen/eight_dp"
        app:cardElevation="@dimen/three_dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
...
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/eighteen_dp"
                        android:layout_marginEnd="@dimen/eighteen_dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/ivBack"
                            android:layout_width="25dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginEnd="@dimen/six_dp"
                            android:layout_marginRight="@dimen/six_dp"
                            android:src="@drawable/ic_back_arrow" />
...
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#E0E0E0" />

                <ScrollView
                    android:id="@+id/visualScroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                                android:layout_height="wrap_content"
                                android:text="@string/manufacturing_date"
                                android:textColor="@color/text_color1"
                                android:textSize="@dimen/fourteen_sp" />

                            <com.walkins.aapkedoorstep.custom.NormalEditText
                                android:id="@+id/edtManufaturingDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/five_dp"
                                android:background="@drawable/layout_bg_corner"
                                android:gravity="start|center"
                                android:inputType="number"
...
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:orientation="vertical">


                                        <ImageView
                                            android:id="@+id/ivOkSideWell"
                                            android:layout_width="30dp"
                                            android:layout_height="30dp"
                                            android:layout_gravity="center"
                                            android:src="@mipmap/ic_blank_condition" />

                                        <com.walkins.aapkedoorstep.custom.NormalTextView
...
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:orientation="vertical">


                                        <ImageView
                                            android:id="@+id/ivSugShoulder"
                                            android:layout_width="30dp"
                                            android:layout_height="30dp"
                                            android:layout_gravity="center"
                                            android:src="@mipmap/ic_blank_condition" />

                                        <com.walkins.aapkedoorstep.custom.NormalTextView
...
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:orientation="vertical">


                                        <ImageView
                                            android:id="@+id/ivSugTreadDepth"
                                            android:layout_width="30dp"
                                            android:layout_height="30dp"
                                            android:layout_gravity="center"
                                            android:src="@mipmap/ic_blank_condition" />

                                        <com.walkins.aapkedoorstep.custom.NormalTextView
...
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:orientation="vertical">


                                        <ImageView
                                            android:id="@+id/ivReqTreadWear"
                                            android:layout_width="30dp"
                                            android:layout_height="30dp"
                                            android:layout_gravity="center"
                                            android:src="@mipmap/ic_blank_condition" />

                                        <com.walkins.aapkedoorstep.custom.NormalTextView
...
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:orientation="vertical">


                                        <ImageView
                                            android:id="@+id/ivOkRimDamage"
                                            android:layout_width="30dp"
                                            android:layout_height="30dp"
                                            android:layout_gravity="center"
                                            android:src="@mipmap/ic_blank_condition" />

                                        <com.walkins.aapkedoorstep.custom.NormalTextView
...
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:orientation="vertical">

                                        <ImageView
                                            android:id="@+id/ivReqbubble"
                                            android:layout_width="30dp"
                                            android:layout_height="30dp"
                                            android:layout_gravity="center"
                                            android:src="@mipmap/ic_blank_condition" />

                                        <com.walkins.aapkedoorstep.custom.NormalTextView
...
                                android:text="issue to be resolved"
                                android:textAllCaps="true"
                                android:textColor="@color/text_color1"
                                android:textSize="@dimen/fourteen_sp" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/issueResolvedRecycView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/fourteen_dp" />

                            <RelativeLayout
                                android:id="@+id/relTyrePhotoAdd"
...
