...

    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnNext"
        android:layout_margin="@dimen/ten_dp"
        app:cardCornerRadius="@dimen/eight_dp"
        app:cardElevation="@dimen/three_dp"
        app:cardUseCompatPadding="true">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
...
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E0E0E0" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gridviewRecycMake_"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_marginTop="@dimen/fourteen_dp"
                android:layout_marginEnd="@dimen/ten_dp"
                android:layout_marginBottom="@dimen/fourteen_dp"
...
                                android:src="@drawable/ic_selected_vehicle"
                                android:visibility="visible" />
                        </RelativeLayout>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/ivEditVehicleMake"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="@dimen/twelve_dp"
                        android:layout_marginLeft="@dimen/twelve_dp"
                        android:padding="@dimen/six_dp"
                        android:src="@mipmap/ic_edit_icon" />
...
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:paddingTop="@dimen/eight_dp"
                                android:paddingBottom="@dimen/eight_dp">

                                <CheckBox
                                    android:id="@+id/chkRF"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="-5dp"
                                    android:layout_marginLeft="-5dp"
                                    android:buttonTint="@color/text_color2"
                                    android:paddingStart="@dimen/three_dp"
...
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:paddingTop="@dimen/eight_dp"
                                android:paddingBottom="@dimen/eight_dp">

                                <CheckBox
                                    android:id="@+id/chkLR"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="-5dp"
                                    android:layout_marginLeft="-5dp"

                                    android:buttonTint="@color/text_color2"
...
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:paddingTop="@dimen/eight_dp"
                                android:paddingBottom="@dimen/eight_dp">

                                <CheckBox
                                    android:id="@+id/chkRR"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="-5dp"
                                    android:layout_marginLeft="-5dp"

                                    android:buttonTint="@color/text_color2"
...
